task 2 is completed

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-top: 30px;
+  background-color: #c4a6a6;
 }
 
 code {
