--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(90, 151, 39);
+    background-color: #C0DEC5;
     height: 80px;
     margin: 0;
 }
