--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: rgb(90, 151, 39);
+    background-color: var(--accent-color);
 }
 
 .avatar{
@@ -49,7 +49,7 @@
     justify-content: center;
     width: calc(100% / 3);
     height: 100px;
-    background-color: #455882a2;
+    background-color: var(--second-color);
     border: 1px solid;
 }
 
