--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-top: 30px;
-  background-color: #c4a6a6;
+  background-color: #D0FFED;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+:root {
+  --second-color: #C0DDED;
+  --accent-color: #C0DEC5;
 }
