--- a/src/components/FriendList/FriendItem/FriendItem.module.css
+++ b/src/components/FriendList/FriendItem/FriendItem.module.css
@@ -1,36 +1,35 @@
 .item {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    width: 100%;
-    margin-bottom: 20px;
-    padding-left: 20px;
-    height: 60px;
-    border: 0;
-    background-color: #C0DEC5;
-   
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  margin-bottom: 20px;
+  padding-left: 20px;
+  height: 60px;
+  border: 0;
+  background-color: #c0dec5;
 }
 
 .avatar {
-    width: 50px;
-    height: 50px;
-    border-radius: 15px;
-    margin-right: 30px;
+  width: 50px;
+  height: 50px;
+  border-radius: 15px;
+  margin-right: 30px;
 }
 
 .status {
-    margin-right: 10px;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
+  margin-right: 10px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
 }
 
 .green {
-    composes: status;
-    background-color: green;
+  composes: status;
+  background-color: green;
 }
 
 .red {
-    composes: status;
-    background-color: red;
+  composes: status;
+  background-color: red;
 }
