--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,65 +1,59 @@
 .profile {
-    width: 300px;
-    margin: 0 auto;
-    margin-bottom: 30px;
+  width: 300px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
-
 
 .description {
-    padding-top: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--accent-color);
+  padding-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent-color);
 }
 
-.avatar{
-    width: 100px;
-    height: 100px;
-    max-width: 100%;
-    border-radius: 50%
+.avatar {
+  width: 100px;
+  height: 100px;
+  max-width: 100%;
+  border-radius: 50%;
 }
 
-
-.name{
-    font-weight: 700;
-    margin-bottom: 0;
+.name {
+  font-weight: 700;
+  margin-bottom: 0;
 }
 
-.tag{
-    margin-bottom: 0;
+.tag {
+  margin-bottom: 0;
 }
 
-
-.location{
-    margin-bottom: 50px;
+.location {
+  margin-bottom: 50px;
 }
 
-.stats{
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+.stats {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 .stats li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: calc(100% / 3);
-    height: 100px;
-    background-color: var(--second-color);
-    border: 1px solid;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: calc(100% / 3);
+  height: 100px;
+  background-color: var(--second-color);
+  border: 1px solid;
 }
 
-
-.label{
-    margin-bottom: 10px;
+.label {
+  margin-bottom: 10px;
 }
 
-.quantity{
-    font-weight: 700;
+.quantity {
+  font-weight: 700;
 }
-
-
