--- a/src/components/Statistics/Statistics.module.css
+++ b/src/components/Statistics/Statistics.module.css
@@ -1,41 +1,39 @@
 .statistics {
-    width: 300px;
-    margin: 0 auto;
-    margin-bottom: 30px;
+  width: 300px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 
-
-.title{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #C0DEC5;
-    height: 80px;
-    margin: 0;
+.title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #c0dec5;
+  height: 80px;
+  margin: 0;
 }
 
 .statList {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    list-style: none;
-    background-color: #455882a2
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+  background-color: #455882a2;
 }
-
 
 .item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: calc(100% / 5);
-    height: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: calc(100% / 5);
+  height: 80px;
 }
 
-.label{
-    margin-bottom: 8px;
+.label {
+  margin-bottom: 8px;
 }
 
 .percentage {
-    font-weight: 700;
+  font-weight: 700;
 }
